--- a/package.json
+++ b/package.json
@@ -1,96 +1,100 @@
 {
-  "name": "www",
-  "description": "My personal website.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/AdamJNavarro/www.git"
-  },
-  "bugs": {
-    "url": "https://linear.app/adamjnavarro"
-  },
-  "version": "2.0.0",
-  "commitlint": {
-    "extends": "@commitlint/config-conventional"
-  },
-  "overrides": {
-    "@react-pdf/layout": "3.11.5",
-    "@types/react": "19.0.8",
-    "@types/react-dom": "19.0.3"
-  },
-  "dependencies": {
-    "@react-pdf/renderer": "^4.2.1",
-    "@spotify/web-api-ts-sdk": "^1.2.0",
-    "@tabler/icons-react": "^3.29.0",
-    "@vercel/postgres": "^0.10.0",
-    "@vercel/speed-insights": "^1.1.0",
-    "classnames": "^2.5.1",
-    "geist": "^1.3.1",
-    "moviedb-promise": "^4.0.7",
-    "next": "15.1.6",
-    "next-auth": "^5.0.0-beta.25",
-    "next-mdx-remote": "^5.0.0",
-    "octokit": "^4.1.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-intersection-observer": "^9.15.1",
-    "sugar-high": "^0.9.2"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^19.7.1",
-    "@commitlint/config-conventional": "^19.7.1",
-    "@eslint/compat": "^1.2.6",
-    "@next/eslint-plugin-next": "15.1.6",
-    "@tailwindcss/postcss": "^4.0.4",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^22.13.1",
-    "@types/react": "19.0.8",
-    "@types/react-dom": "19.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.23.0",
-    "@typescript-eslint/parser": "^8.23.0",
-    "convert-csv-to-json": "^2.50.0",
-    "cypress": "^14.0.2",
-    "eslint": "^9.19.0",
-    "eslint-config-next": "15.1.6",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "husky": "^9.1.7",
-    "ky": "^1.7.4",
-    "lint-staged": "^15.4.3",
-    "postcss": "^8.5.1",
-    "prettier": "^3.4.2",
-    "tailwindcss": "^4.0.4",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.3"
-  },
-  "lint-staged": {
-    "*.+(ts|tsx)": [
-      "eslint --cache --fix"
-    ]
-  },
-  "prettier": {
-    "trailingComma": "es5",
-    "tabWidth": 2,
-    "singleQuote": true,
-    "printWidth": 85
-  },
-  "private": true,
-  "scripts": {
-    "dev": "echo \"http://$(eval 'ipconfig getifaddr en0'):3000\" | pbcopy && next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "typecheck": "tsc --noEmit",
-    "export": "next build && next export",
-    "gen:letterboxd": "tsx ./scripts/gen-letterboxd-data.ts",
-    "gen:literal": "tsx ./scripts/gen-literal-data.ts",
-    "gen:trakt": "tsx ./scripts/gen-trakt-data.ts",
-    "lint": "eslint .",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
-    "prepare": "husky",
-    "prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
-    "prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
-    "test": "cypress run"
-  }
+	"name": "www",
+	"description": "My personal website.",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/AdamJNavarro/www.git"
+	},
+	"bugs": {
+		"url": "https://linear.app/adamjnavarro"
+	},
+	"version": "2.0.0",
+	"commitlint": {
+		"extends": "@commitlint/config-conventional"
+	},
+	"overrides": {
+		"@react-pdf/layout": "3.11.5",
+		"@types/react": "19.0.8",
+		"@types/react-dom": "19.0.3"
+	},
+	"dependencies": {
+		"@react-pdf/renderer": "^4.2.1",
+		"@spotify/web-api-ts-sdk": "^1.2.0",
+		"@tabler/icons-react": "^3.29.0",
+		"@vercel/postgres": "^0.10.0",
+		"@vercel/speed-insights": "^1.1.0",
+		"classnames": "^2.5.1",
+		"geist": "^1.3.1",
+		"moviedb-promise": "^4.0.7",
+		"next": "15.1.6",
+		"next-auth": "^5.0.0-beta.25",
+		"next-mdx-remote": "^5.0.0",
+		"octokit": "^4.1.0",
+		"react": "19.0.0",
+		"react-dom": "19.0.0",
+		"react-intersection-observer": "^9.15.1",
+		"sugar-high": "^0.9.2"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@commitlint/cli": "^19.7.1",
+		"@commitlint/config-conventional": "^19.7.1",
+		"@eslint/compat": "^1.2.6",
+		"@next/eslint-plugin-next": "15.1.6",
+		"@tailwindcss/postcss": "^4.0.4",
+		"@tailwindcss/typography": "^0.5.16",
+		"@types/node": "^22.13.1",
+		"@types/react": "19.0.8",
+		"@types/react-dom": "19.0.3",
+		"@typescript-eslint/eslint-plugin": "^8.23.0",
+		"@typescript-eslint/parser": "^8.23.0",
+		"convert-csv-to-json": "^2.50.0",
+		"cypress": "^14.0.2",
+		"eslint": "^9.19.0",
+		"eslint-config-next": "15.1.6",
+		"eslint-plugin-import": "^2.31.0",
+		"eslint-plugin-jsx-a11y": "^6.10.2",
+		"eslint-plugin-react": "^7.37.4",
+		"eslint-plugin-react-hooks": "^5.1.0",
+		"husky": "^9.1.7",
+		"ky": "^1.7.4",
+		"lint-staged": "^15.4.3",
+		"postcss": "^8.5.1",
+		"prettier": "^3.4.2",
+		"tailwindcss": "^4.0.4",
+		"tsx": "^4.19.2",
+		"typescript": "^5.7.3"
+	},
+	"lint-staged": {
+		"*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": [
+			"biome check --write --no-errors-on-unmatched"
+		]
+	},
+	"prettier": {
+		"trailingComma": "es5",
+		"tabWidth": 2,
+		"singleQuote": true,
+		"printWidth": 85
+	},
+	"private": true,
+	"scripts": {
+		"dev": "echo \"http://$(eval 'ipconfig getifaddr en0'):3000\" | pbcopy && next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"typecheck": "tsc --noEmit",
+		"export": "next build && next export",
+		"fmt": "biome format",
+		"fmt:write": "biome format --write",
+		"gen:letterboxd": "tsx ./scripts/gen-letterboxd-data.ts",
+		"gen:literal": "tsx ./scripts/gen-literal-data.ts",
+		"gen:trakt": "tsx ./scripts/gen-trakt-data.ts",
+		"lint": "biome lint",
+		"lint:write": "biome lint --write",
+		"cypress:open": "cypress open",
+		"cypress:run": "cypress run",
+		"prepare": "husky",
+		"prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
+		"prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
+		"test": "cypress run"
+	}
 }
